- z-index fix for admin_help
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@2288 34db09b4-2314-0410-a940-aec02a7c051d

--- a/modules/settings/css/luna.css
+++ b/modules/settings/css/luna.css
@@ -62,7 +62,7 @@
 	clear:			left;
 	border:			1px solid rgb( 145, 155, 156 );
 	background:		rgb( 252, 252, 254 );
-	z-index:		3;
+	z-index:		auto;
 	position:		relative;
     top:			-2px;
 
